# ros_generic_subscriber

./: CMakeLists.txt  README.md  package.xml
include/generic_subscriber/: generic_subscriber.hpp
src/: generic_subscriber.cpp
