<?xml version="1.0"?>
<package format="2">
  <name>generic_subscriber</name>
  <version>0.0.0</version>
  <description>The generic_subscriber package</description>
  <maintainer email="yudai.yamazaki@map4.jp">yudai.yamazaki</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>topic_tools</depend>

  <export>
  </export>
</package>
